{
  "version": 4,
  "terraform_version": "0.12.17",
  "serial": 396,
  "lineage": "26cfd35a-213b-cc77-0d1e-87371a0af49d",
  "resources": [
    {
      "module": "module.gce-k8s-master",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-01-29T22:00:23.686-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/devopsbar20/global/firewalls/k8s-master-allow-http",
            "name": "k8s-master-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/devopsbar20/global/networks/default",
            "priority": 1000,
            "project": "devopsbar20",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devopsbar20/global/firewalls/k8s-master-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "master-http"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.gce-k8s-worker",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-01-29T22:00:23.825-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/devopsbar20/global/firewalls/k8s-worker-allow-http",
            "name": "k8s-worker-allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/devopsbar20/global/networks/default",
            "priority": 1000,
            "project": "devopsbar20",
            "self_link": "https://www.googleapis.com/compute/v1/projects/devopsbar20/global/firewalls/k8s-worker-allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "worker-http"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.gce-k8s-master",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20191210",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devopsbar20/zones/us-west1-a/disks/k8s-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devopsbar20/zones/us-west1-a/instances/k8s-master",
            "instance_id": "4353512435456396823",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "startup-script": "        echo \"ansible123\" | passwd --stdin root\n        sed -i 's/PermitRootLogin no/PermitRootLogin yes/g' /etc/ssh/sshd_config\n        sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/g' /etc/ssh/sshd_config\n        systemctl restart sshd\n"
            },
            "metadata_fingerprint": "z5dLoDJ8b4M=",
            "name": "k8s-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.199.158.80",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devopsbar20/global/networks/default",
                "network_ip": "10.138.0.15",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devopsbar20/regions/us-west1/subnetworks/default",
                "subnetwork_project": "devopsbar20"
              }
            ],
            "project": "devopsbar20",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devopsbar20/zones/us-west1-a/instances/k8s-master",
            "tags": [
              "k8s-master"
            ],
            "tags_fingerprint": "_LH7AApl0rc=",
            "zone": "us-west1-a"
          }
        }
      ]
    },
    {
      "module": "module.gce-k8s-worker",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20191210",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devopsbar20/zones/us-west1-a/disks/k8s-worker1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devopsbar20/zones/us-west1-a/instances/k8s-worker1",
            "instance_id": "7648253342243606039",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "startup-script": "        echo \"ansible123\" | passwd --stdin root\n        sed -i 's/PermitRootLogin no/PermitRootLogin yes/g' /etc/ssh/sshd_config\n        sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/g' /etc/ssh/sshd_config\n        systemctl restart sshd\n"
            },
            "metadata_fingerprint": "z5dLoDJ8b4M=",
            "name": "k8s-worker1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.185.217.40",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devopsbar20/global/networks/default",
                "network_ip": "10.138.0.16",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devopsbar20/regions/us-west1/subnetworks/default",
                "subnetwork_project": "devopsbar20"
              }
            ],
            "project": "devopsbar20",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devopsbar20/zones/us-west1-a/instances/k8s-worker1",
            "tags": [
              "k8s-worker1"
            ],
            "tags_fingerprint": "4GQT1ykIby8=",
            "zone": "us-west1-a"
          }
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/centos-cloud/global/images/centos-7-v20191210",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/devopsbar20/zones/us-west1-a/disks/k8s-worker2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/devopsbar20/zones/us-west1-a/instances/k8s-worker2",
            "instance_id": "5230330910877928983",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-2",
            "metadata": {
              "startup-script": "        echo \"ansible123\" | passwd --stdin root\n        sed -i 's/PermitRootLogin no/PermitRootLogin yes/g' /etc/ssh/sshd_config\n        sed -i 's/PasswordAuthentication no/PasswordAuthentication yes/g' /etc/ssh/sshd_config\n        systemctl restart sshd\n"
            },
            "metadata_fingerprint": "z5dLoDJ8b4M=",
            "name": "k8s-worker2",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.199.126.48",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/devopsbar20/global/networks/default",
                "network_ip": "10.138.0.17",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/devopsbar20/regions/us-west1/subnetworks/default",
                "subnetwork_project": "devopsbar20"
              }
            ],
            "project": "devopsbar20",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/devopsbar20/zones/us-west1-a/instances/k8s-worker2",
            "tags": [
              "k8s-worker2"
            ],
            "tags_fingerprint": "OXK0t8umgrw=",
            "zone": "us-west1-a"
          }
        }
      ]
    }
  ]
}